// Copyright 2015 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mirage.geo";
option java_outer_classname = "GeocodingServiceProto";
option objc_class_prefix = "HLW";

package com.migrate.geo;

// The greeting service definition.
service GeociodingService {
  // Sends a greeting
  rpc GetGeocode (GetGeocodeRequest) returns (GetGeocodeResponse) {}
}

// The request message containing the user's name.
message GetGeocodeRequest {
  string name = 1;
}

// The response message containing the greetings
message GetGeocodeResponse {
  string message = 1;
}